--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "trees-of-sf",
   "version": "0.1.0",
+  "homepage": "https://diva-harsoor.github.io/trees-of-sf",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -8,12 +9,15 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^1.5.2",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy":  "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
